--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -19,7 +19,7 @@ body, html {
 .mainMenu {
   //position: absolute;
     //display: block;
-    margin-top: 12%;
+    margin-top: 9%;
     //margin-right: 25%;
     //margin-left: 25%;
     //height:50%;
@@ -45,38 +45,14 @@ body, html {
   margin-right: 10%;
 }
 
-.spinner {
-  width: 100px;
-}
-.spinner input {
-  text-align: right;
-}
-.input-group-btn-vertical {
+.leftButton {
   position: relative;
-  white-space: nowrap;
-  width: 1%;
-  vertical-align: middle;
-  display: table-cell;
+  //margin-left:140%;
+  margin-top: 35%
 }
-.input-group-btn-vertical > .btn {
-  display: block;
-  float: none;
-  width: 100%;
-  max-width: 100%;
-  padding: 8px;
-  margin-left: -1px;
+
+.rightButton {
   position: relative;
-  border-radius: 0;
-}
-.input-group-btn-vertical > .btn:first-child {
-  border-top-right-radius: 4px;
-}
-.input-group-btn-vertical > .btn:last-child {
-  margin-top: -2px;
-  border-bottom-right-radius: 4px;
-}
-.input-group-btn-vertical i{
-  position: absolute;
-  top: 0;
-  left: 4px;
+  //margin-right:140%;
+  margin-top: 35%
 }
