--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -2,18 +2,21 @@ body, html {
     height: 100%;
 }
 
-.parallax {
-    /* The image used */
-    background-image: url('../images/planeBackground.jpg');
+.backgroundimage, .parallax{
+  /* The image used */
+  background-image: url('../images/planeBackground.jpeg');
+  background-size: cover;
 
+}
+
+.parallax {
     /* Full height */
-    height: 100%; 
+    height: 100%;
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .mainMenu {
@@ -24,7 +27,7 @@ body, html {
     //margin-left: 25%;
     //height:50%;
     //width: 50%;
-  background-color: #ffe577;  
+  background-color: #ffe577;
   border-radius: 10px;
   border: 3px solid;
   border-color: #fec051;
@@ -38,6 +41,10 @@ body, html {
 
 .menuOptions {
   margin-top: 5%;
+}
+
+.centerVertically{
+  align-items: center; /* align vertical */
 }
 
 .menuButton {
