--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -6,7 +6,6 @@ body, html {
   /* The image used */
   background-image: url('../images/planeBackground.jpeg');
   background-size: cover;
-
 }
 
 .parallax {
@@ -19,7 +18,7 @@ body, html {
     background-repeat: no-repeat;
 }
 
-.mainMenu {
+.mainMenu, .filterMenu {
   //position: absolute;
     //display: block;
     margin-top: 9%;
@@ -31,10 +30,17 @@ body, html {
   border-radius: 10px;
   border: 3px solid;
   border-color: #fec051;
-    font-size: 12px;
-    letter-spacing: 2px;
+  font-size: 12px;
+  letter-spacing: 2px;
 }
-
+.filterMenu {
+  border-radius: 0px;
+  border: 1px solid;
+  border-color: #fec051;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+  margin-top: 0%;
+}
 .centerText {
   text-align: center;
 }
