--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -18,8 +18,21 @@ body, html {
     background-repeat: no-repeat;
 }
 
+.iframeStyle{
+  margin-top: 9%;
+  width: 800px;
+  height: 500px;
+}
+
+.flightStyle {
+  background-color: white;
+  border-color: black;
+  height: 100%;
+  margin-top: 9%;
+}
+
 .mainMenu, .filterMenu {
-  margin-top: 9%; 
+  margin-top: 9%;
   background-color: #ffe577;
   border-radius: 10px;
   border: 3px solid;
@@ -27,6 +40,7 @@ body, html {
   font-size: 12px;
   letter-spacing: 2px;
 }
+
 .filterMenu {
   border-radius: 0px;
   border: 1px solid;
@@ -67,6 +81,14 @@ body, html {
 #promoBtn {
   position: absolute;
   bottom: 1%;
+}
+
+.errorMessage{
+   display:none;
+   background-color: #FF9494;
+   border-radius: 5px;
+   border: solid 1px;
+   border-color: red;
 }
 
 .spinner {
