--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -53,6 +53,10 @@ body, html {
   text-align: center;
 }
 
+.rightText {
+  text-align: right;
+}
+
 .menuOptions {
   margin-top: 5%;
 }
@@ -89,6 +93,7 @@ body, html {
 
 .searchclear {
     position: absolute;
+     z-index: 10;
     right: 17%;
     top: 0;
     bottom: 0;
@@ -148,3 +153,8 @@ body, html {
   background: blue;
   font-weight: bold;
 } 
+
+.pre-scrollable {
+    max-height: 550px;
+    overflow-y: scroll;
+}
