--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -43,6 +43,11 @@ body, html {
   letter-spacing: 2px;
 }
 
+.psgrCount {
+  //max-width: 45px;
+
+}
+
 .flightMenu {
   margin-top: 2%;
 }
@@ -64,6 +69,10 @@ body, html {
 }
 
 .menuOptions {
+  margin-top: 5%;
+}
+
+.chooseSort {
   margin-top: 5%;
 }
 
