--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -34,8 +34,9 @@ body, html {
 
 .mainMenu, .filterMenu, .flightMenu {
   margin-top: 9%;
-  //background-color: #ffe577;
-  background-color: rgb(255, 229, 119, 0.85);
+  background-color: #ffe577;
+  opacity : 0.85;
+  /*background-color: rgb(255, 229, 119, 0.85);*/
   border-radius: 10px;
   border: 3px solid;
   border-color: #fec051;
@@ -167,7 +168,7 @@ body, html {
 .awesomplete mark {
   background: blue;
   font-weight: bold;
-} 
+}
 
 .pre-scrollable {
     max-height: 500px;
