Terminadas las promociones

--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -288,3 +288,11 @@ body, html {
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
+
+.thumbnail {
+    cursor:pointer;
+}
+
+.compraPromo{
+  margin-top: 20%;
+}
