arreglado algo de los botones de volver y hecho que la checkpage se viera bien

--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -74,7 +74,9 @@ body, html {
 .menuOptions {
   margin-top: 5%;
 }
-
+.formTopMargin {
+  margin-top: 2.5%;
+}
 .chooseSort {
   margin-top: 5%;
 }
