--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -37,7 +37,7 @@ body, html {
 .mainMenu, .filterMenu, .flightMenu {
   margin-top: 9%;
   background-color: #ffe577;
-  opacity : 0.85;
+  //opacity : 0.85;
   /*background-color: rgb(255, 229, 119, 0.85);*/
   border-radius: 10px;
   border: 3px solid;
