Agregada defensa contra no JS y timeout, correccion de aeropuertos

--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -18,6 +18,10 @@ body, html {
     background-repeat: no-repeat;
 }
 
+.jsCheck{
+  display: none;
+}
+
 .iframeStyle{
   margin-top: 9%;
   width: 800px;
