--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -303,3 +303,11 @@ body, html {
 .compraPromo{
  margin-top: 20%;
 }
+
+#notFound{
+  margin-top: 10%;
+  margin-bottom: 10%;
+  text-align: center;
+  font-size: 20px;
+  display: none;
+}
