--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -50,6 +50,30 @@ body, html {
   letter-spacing: 2px;
 }
 
+.passengerInfoMenu, .paymentMenu {
+  margin-top: 3%;
+  background-color: #ffe577;
+  //opacity : 0.85;
+  /*background-color: rgb(255, 229, 119, 0.85);*/
+  border-radius: 10px;
+  border: 3px solid;
+  border-color: #fec051;
+  font-size: 12px;
+  letter-spacing: 2px;
+}
+
+#promoBtn {
+  background-color: #222222;
+  border-radius: 10px;
+  border: 2px solid;
+  border-color: #ffe577;
+  color: #ffe577;
+}
+
+#searchFly {
+  margin-bottom: 10px;
+}
+
 .psgrCount {
   //max-width: 45px;
 
@@ -104,11 +128,6 @@ body, html {
   position: relative;
   //margin-right:140%;
   margin-top: 35%
-}
-
-#promoBtn {
-  position: absolute;
-  bottom: 1%;
 }
 
 #fechaLlegada {
@@ -310,4 +329,13 @@ body, html {
   text-align: center;
   font-size: 20px;
   display: none;
+}
+
+.bottom-buffer {
+  margin-bottom:7%;
+}
+
+#orderBy {
+  margin-top: 3%;
+  margin-bottom: 4%;
 }
