ticket showcase en confirmation page

--- a/bootstrap-3.3.7-dist/css/mystyle.css
+++ b/bootstrap-3.3.7-dist/css/mystyle.css
@@ -50,7 +50,7 @@ body, html {
   letter-spacing: 2px;
 }
 
-.passengerInfoMenu, .paymentMenu {
+.passengerInfoMenu, .paymentMenu, .checkMenu {
   margin-top: 3%;
   background-color: #ffe577;
   //opacity : 0.85;
